# grpc-pyi-plugin

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  sample.proto  sample_pb2.py  sample_pb2_grpc.py  sample_pb2_grpc.pyi
grpc_pyi_plugin/: __init__.py  __main__.py  _google_protobuf_compiler_plugin_pb2.py  _google_protobuf_compiler_plugin_pb2.pyi
tests/: __init__.py  conftest.py  test_protoc.py  test_stub.py
