[tool.poetry]
name = "grpc-pyi-plugin"
version = "0.0.0a0.dev0"
description = "gRPC plugin for *_pb2_grpc.pyi"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
