[tool.poetry]
name = "grpc-pyi-plugin"
version = "0.0.0a0.dev0"
description = "gRPC plugin for *_pb2_grpc.pyi"
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1"
grpcio-tools = "^1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pyproject-flake8 = { version = "^6.1.0", python=">=3.8.1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
